--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,51 @@
-.App {
-  text-align: center;
+.container{
+  margin: 0;
+  padding: 20px;
+  background-color: #FAEEE7;
+  border: dashed #325288 3px;
+  border-radius: 10px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  margin-right: -50%;
+  transform: translate(-50%, -50%);
+  width: 350px;
+  height: 500px;
+  overflow: scroll;
+  
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.number-input{
+  background-color: #FAEEE7;
+  padding: 5px;
+  width: 323px;
+  height: 30px;
+  font-size: 1.6rem;
+  border: #325288 2px solid !important;
+  border-radius: 10px;
+  color: #325288;
+
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.listItems {
+  margin: .5em;
+  padding: 1.2em;
+  border: #24A19C 1px solid;
+  background-color: #24A19C;
+  border-radius: 8px;
+  cursor: pointer;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.disabledItems{
+  margin: .5em;
+  padding: 1.2em;
+  border: #D96098 1px solid !important;
+  border-radius: 8px;
+  background-color: #D96098 !important;
+  opacity: 0.7;
+  cursor: not-allowed;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.listItems:hover{
+  background-color: #1C807C ;
 }
